# oakfs

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
libcute/: __init__.py  _cli.py  _main.py
libfs/: __init__.py  _cli.py  _main.py
oakfs/: __init__.py  _cli.py  _logroller.py  _main.py  _oak.py  _scanner.py  cli.py  filesystem.py  logroller.py  oak.py  scanner.py
