[project]
name = "oakfs"
version = "0.3.0"
description = "a humane CLI-based filesystem exploration tool, for humans."
authors = [
    { name = "Ritchie Mwewa", email = "rly0nheart@duck.com" }
]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/rly0nheart/oakfs"
homepage = "https://github.com/rly0nheart/oakfs"
keywords = ["filesystem", "visualisation", "cli", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]
requires-python = ">=3.12"
dependencies = [
    "humanize (>=4.13.0,<5.0.0)",
    "python-magic (>=0.4.27,<1.0.0)",
    "rich-click (>=1.8.9,<2.0.0)"
]

[tool.poetry.scripts]
oak = "oakfs.cli:start"
oakfs = "oakfs.cli:super_easy_barely_an_inconvenience"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
