[project]
name = "oakfs"
version = "0.5.1"
description = "A humane CLI-based filesystem exploration tool, for humans."
authors = [
    { name = "Ritchie Mwewa", email = "rly0nheart@duck.com" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.urls]
issues = "https://github.com/rly0nheart/oakfs/issues"
repository = "https://github.com/rly0nheart/oakfs"

[tool.poetry.dependencies]
python = "^3.12"
humanize = "^4.13.0"
rich-click = "^1.8.9"
puremagic = "^1.30"

[tool.poetry.scripts]
oak = "oakfs.cli:start"
oakfs = "oakfs.cli:super_easy_barely_an_inconvenience"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
